package main

import (
	"bufio"
	"context"
	"fmt"
	"log"
	"os"
	"strings"
	"time"

	"ebusta/api/proto/v1"
	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"
)

var debugMode bool

func main() {
	// 0. ĞŸÑ€Ğ¾Ğ²ĞµÑ€ÑĞµĞ¼ Ñ€ĞµĞ¶Ğ¸Ğ¼ Ğ¾Ñ‚Ğ»Ğ°Ğ´ĞºĞ¸
	if os.Getenv("DEBUG") != "" {
		debugMode = true
		log.Println("ğŸ DEBUG MODE: ENABLED")
	}

	// 1. ĞŸĞ¾Ğ´ĞºĞ»ÑÑ‡ĞµĞ½Ğ¸Ğµ Ğº Orchestrator
	conn, err := grpc.Dial("localhost:50054", grpc.WithTransportCredentials(insecure.NewCredentials()))
	if err != nil {
		log.Fatalf("âŒ Failed to connect to Orchestrator: %v", err)
	}
	defer conn.Close()

	client := libraryv1.NewOrchestratorServiceClient(conn)

	// 2. Ğ›Ğ¾Ğ³Ğ¸ĞºĞ° Ğ·Ğ°Ğ¿ÑƒÑĞºĞ°: ĞÑ€Ğ³ÑƒĞ¼ĞµĞ½Ñ‚Ñ‹ VS Ğ˜Ğ½Ñ‚ĞµÑ€Ğ°ĞºÑ‚Ğ¸Ğ²
	if len(os.Args) > 1 {
		// --- One-Shot Mode (Ğ´Ğ»Ñ ÑĞºÑ€Ğ¸Ğ¿Ñ‚Ğ¾Ğ²) ---
		query := strings.Join(os.Args[1:], " ")
		runSearch(client, query)
	} else {
		// --- Interactive Mode (Ğ´Ğ»Ñ Ğ»ÑĞ´ĞµĞ¹) ---
		runInteractiveLoop(client)
	}
}

func runInteractiveLoop(client libraryv1.OrchestratorServiceClient) {
	reader := bufio.NewReader(os.Stdin)
	fmt.Println("ğŸš€ Ebusta CLI Interactive Mode")
	fmt.Println("Type 'exit' or 'quit' to stop.")
	fmt.Println("---------------------------------")

	for {
		fmt.Print("ebusta> ")
		text, _ := reader.ReadString('\n')
		text = strings.TrimSpace(text)

		if text == "" {
			continue
		}
		if text == "exit" || text == "quit" {
			fmt.Println("Bye!")
			break
		}

		runSearch(client, text)
	}
}

func runSearch(client libraryv1.OrchestratorServiceClient, query string) {
	if debugMode {
		log.Printf("ğŸ“¡ Sending query: '%s'", query)
	}

	ctx, cancel := context.WithTimeout(context.Background(), 10*time.Second)
	defer cancel()

	resp, err := client.HandleInput(ctx, &libraryv1.UserRequest{
		RawInput: query,
		UserId:   "cli-user",
		Platform: "cli",
	})

	if err != nil {
		log.Printf("âŒ Error: %v", err)
		return
	}

	if resp.TotalFound == 0 {
		fmt.Println("No results found.")
		return
	}

	// Ğ’Ñ‹Ğ²Ğ¾Ğ´ Ğ·Ğ°Ğ³Ğ¾Ğ»Ğ¾Ğ²ĞºĞ°
	fmt.Printf("%-40s | %-40s | %s\n", "ID", "Title", "Authors")
	fmt.Println(strings.Repeat("-", 100))

	// Ğ’Ñ‹Ğ²Ğ¾Ğ´ ÑÑ‚Ñ€Ğ¾Ğº
	for _, b := range resp.Books {
		title := truncate(b.Title, 38)
		authors := truncate(strings.Join(b.Authors, ", "), 30)
		fmt.Printf("%-40s | %-40s | %s\n", b.Id, title, authors)
	}
	if debugMode {
		fmt.Printf("\n[Total: %d]\n", resp.TotalFound)
	}
}

func truncate(s string, max int) string {
	if len([]rune(s)) > max {
		return string([]rune(s)[:max]) + "..."
	}
	return s
}
